Show feed refresh progress
